--- a/MyWallStApp/templates/homepage/index.html
+++ b/MyWallStApp/templates/homepage/index.html
@@ -2,8 +2,9 @@
     <style type="text/css">
 
         .product {
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          max-width: 300px;
+          box-shadow: 0 4px 10px 0 rgba(0, 0, 1, 0.9);
+          max-width: 500px;
+          margin-top:100px;
           margin: auto;
           text-align: center;
           font-family: arial;
@@ -11,27 +12,33 @@
 
         .price {
                   color: grey;
-                  font-size: 22px;
+                  margin-top:30px;
+                  font-size: 30px;
                 }
         .cls {
                   border: none;
                   outline: 0;
                   padding: 12px;
                   color: white;
-                  background-color: #000;
+                  margin-top:60px;
+                  background-color: blue;
                   text-align: center;
                   cursor: pointer;
                   width: 100%;
                   font-size: 18px;
                 }
+         .h3 {
+                font-size: 40px;
+                margin-top:60px;
+         }
     </style>
 
     <body class="product">
-    <h3>Product-1</h3>
+    <h3 class="h3">Product-1</h3>
     <p class="price">€ 10.00</p>
-    <p>Standard Plan</p>
+    <p class="price">Standard Plan</p>
     <form action = "payment" method = "GET">
         <input class="cls" type="submit" value="Click here to subscribe!">
     </form>
     </body>
-</html>>
+</html>
